# LHAC

./: .gitignore  CMakeLists.txt  README.markdown  a9a.mat  index.html  params.json
LHAC_v1/: LHAC_v1.1  Lbfgs.cpp  Lbfgs.h  LogReg.cpp  LogReg.h  Objective.cpp  Objective.h  drive.cpp  l1log-mex.cpp  l1log.cpp  l1log.h  lhac-mex-gen.cpp  lhac.cpp  lhac.h  main.c  myUtilities.cpp  myUtilities.h  sics_lhac.cpp
LHAC_v1.xcodeproj/: project.pbxproj
LHAC_v2/LHAC_v2/: LHAC_v2.1  main.cpp
cmake/: FindOpenBLAS.cmake
include/: Lbfgs.h  LogReg.h  Objective.h  timing.h
pepper/: main.cpp  pepper.1
src/: CMakeLists.txt  Debug.xcconfig  LHAC_demo.m  Lasso.cpp  Lasso.h  Lbfgs.cpp  Lbfgs.h  LogReg.cpp  LogReg.h  Makefile  Objective.cpp  Objective.h  Parameter.h  README.markdown  Release.xcconfig  Shared.xcconfig  demo_l1log.m  drive.cpp  lhac-mex-gen.cpp  lhac.h  liblapack.h  linalg.h  myUtilities.cpp  myUtilities.h  scaledp1.csv  sics_lhac-mex.cpp  sics_lhac.cpp  sics_lhac.h  timing.h  utils.h
src/removed/: myUtilities.cpp  myUtilities.h
